# revenue-intelligence

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: ERD.md  ProjectDescription.md  SubmissionGuide.md
queries/: analytical_queries.sql
schema/: 01_tables.sql  02_views.sql
scripts/: generate_data.py  ingest_data.py  test_connection.py
seed_data/: activity_logs.csv  crm_accounts.csv  crm_contacts.csv  crm_line_items.csv  crm_opportunities.csv  crm_products.csv  crm_users.csv  usage_subscriptions.csv
